--- a/resources/sass/base/base.scss
+++ b/resources/sass/base/base.scss
@@ -1,11 +1,38 @@
+@import url("https://fonts.googleapis.com/css2?family=Bellefair&display=swap");
 * {
     box-sizing: border-box;
+    font-family: "Titillium Web", sans-serif;
+}
+
+h1,
+h2 {
+    color: #404040;
 }
 
 body {
     width: 100%;
     height: 100%;
+    min-width: 100vw;
+    min-height: 100vh;
     margin: 0;
+    position: relative;
+}
+
+.background {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+
+    img {
+        width: 100%;
+        height: 100%;
+        display: block;
+        object-fit: cover;
+        opacity: 0.2;
+    }
 }
 
 main {
@@ -15,5 +42,6 @@ main {
     margin: auto;
     display: grid;
     place-items: center;
-    border: 1px solid black;
+
+    padding: 25px;
 }
