--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,11 +1,38 @@
+@import url(https://fonts.googleapis.com/css2?family=Bellefair&display=swap);
 * {
   box-sizing: border-box;
+  font-family: "Titillium Web", sans-serif;
+}
+
+h1,
+h2 {
+  color: #404040;
 }
 
 body {
   width: 100%;
   height: 100%;
+  min-width: 100vw;
+  min-height: 100vh;
   margin: 0;
+  position: relative;
+}
+
+.background {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+.background img {
+  width: 100%;
+  height: 100%;
+  display: block;
+  -o-object-fit: cover;
+     object-fit: cover;
+  opacity: 0.2;
 }
 
 main {
@@ -15,17 +42,171 @@ main {
   margin: auto;
   display: grid;
   place-items: center;
-  border: 1px solid black;
+  padding: 25px;
 }
 
-.table {
+.header {
   width: 100%;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding-bottom: 50px;
 }
-.table-item {
+.header h1 {
   width: 100%;
-  display: grid;
-  place-items: center;
-  font-size: 20px;
+  text-align: center;
+}
+.header #map,
+.header img {
+  width: 100%;
+  height: 500px;
+  box-shadow: 5px 5px 5px rgb(217, 217, 217);
+}
+.header img {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.button-div {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  padding-top: 30px;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  font-size: 13px;
+  box-shadow: 5px 5px 5px rgb(217, 217, 217);
+}
+table tr {
+  border-radius: 30px;
+  transition: 0.4s ease;
+  background-color: white;
+  color: black;
+}
+table td,
+table th {
+  text-align: center;
+}
+table th {
+  background: #ffd12d;
+  color: black;
+  padding: 10px 0;
+}
+table td button,
+table td a {
+  background-color: transparent;
+  padding: 5px;
+  border: 0;
+  cursor: pointer;
+}
+table td button img,
+table td a img {
+  width: 20px;
+}
+
+.modal {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.6);
+  opacity: 0;
+  pointer-events: none;
+  transition: 0.4s ease;
+}
+.modal.is-open {
+  opacity: 1;
+  pointer-events: all;
+}
+.modal__close {
+  position: absolute;
+  top: 15px;
+  right: 25px;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+}
+.modal__close::before, .modal__close::after {
+  content: "";
+  width: 2px;
+  height: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  background-color: #000000;
+}
+.modal__close::before {
+  transform: translate(-50%, -50%) rotate(-45deg);
+}
+.modal__close::after {
+  transform: translate(-50%, -50%) rotate(45deg);
+}
+.modal__inner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -60%);
+  height: -moz-fit-content;
+  height: fit-content;
+  width: 350px;
+  height: 350px;
+  background-color: white;
+  border-radius: 30px;
+  padding: 25px;
+  transition: 0.4s ease;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+.is-open .modal__inner {
+  transform: translate(-50%, -50%);
+}
+.modal__inner-header {
+  display: flex;
+  color: #000000;
+  padding: 25px 0;
+}
+.modal__inner-header h2 {
+  width: 100%;
+  font-size: 30px;
+  margin: 0;
+  text-align: center;
+}
+.modal__inner-input {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  align-items: center;
+}
+.modal__inner-input input {
+  width: 100%;
+  border-radius: 30px;
+  padding: 10px 25px;
+  border: 1px solid black;
+}
+.modal__inner-footer {
+  margin-top: auto;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.button {
+  width: -moz-fit-content;
+  width: fit-content;
+  padding: 15px 50px;
+  transition: 0.4s ease;
+  border-radius: 30px;
+  border: 0;
+}
+.button.green {
+  background-color: #ffd12d;
+  text-align: center;
+  color: black;
+}
+.button.green:hover {
+  background-color: #b69624;
 }
