--- a/public/css/app.css
+++ b/public/css/app.css
@@ -182,7 +182,11 @@ table td a img {
   gap: 20px;
   align-items: center;
 }
-.modal__inner-input input {
+.modal__inner-input label {
+  width: 100%;
+}
+.modal__inner-input input,
+.modal__inner-input select {
   width: 100%;
   border-radius: 30px;
   padding: 10px 25px;
