--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,6 +1,14 @@
-* { font-family: "Open Sans", arial, helvetica; }
+* {
+    font-family: "Open Sans", arial, helvetica;
+}
 
-.body-bg {
-  background-color: #2149e8;
-  background-image: linear-gradient(315deg, #2149e8 0%, #5f72be 74%);
+.invalid-feedback {
+    position: relative;
+    padding: 0.75rem 1.25rem;
+    margin-bottom: 1rem;
+    border: 1px solid transparent;
+    border-radius: 0.25rem;
+    color: #721c24;
+    background-color: #f8d7da;
+    border-color: #f5c6cb;
 }
